[gd_scene load_steps=2 format=3 uid="uid://bs8ijki1756l8"]

[ext_resource type="Script" path="res://DestinySelectStage/DestinySelectStage.gd" id="1_gd8wn"]

[node name="DestinySelectStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gd8wn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Death" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "죽음"

[node name="Luck" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "행운"

[node name="Devotion" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "헌신"

[node name="Wealth" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "부"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Death" to="." method="death_select"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Luck" to="." method="luck_select"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Devotion" to="." method="devotion_select"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Wealth" to="." method="wealth_select"]
